zigbee: just to note, that it's br0ken in this tree.
Signed-off-by: Dmitry Eremin-Solenikov <dbaryshkov@gmail.com>

--- a/net/zigbee/Kconfig
+++ b/net/zigbee/Kconfig
@@ -1,6 +1,6 @@
 config ZIGBEE 
 	tristate "ZigBee Low-Rate Wireless Personal Area Networks support (EXPERIMENTAL)"
-	depends on EXPERIMENTAL
+	depends on EXPERIMENTAL && BROKEN
 	---help---
 	  
 	Say Y here to compile ZigBee support into the kernel or say M to
