--- a/drivers/ieee802154/Kconfig
+++ b/drivers/ieee802154/Kconfig
@@ -21,8 +21,8 @@ config IEEE802154_FAKEHARD
 	  The module will be called 'fakehard'.
 
 
-if IEEE802154_DRIVERS && MAC802154
 config IEEE802154_FAKELB
+	depends on IEEE802154_DRIVERS && MAC802154
 	tristate "Fake LR-WPAN driver with several interconnected devices"
 	---help---
 	  Say Y here to enable the fake driver that can emulate a net
@@ -32,12 +32,11 @@ config IEEE802154_FAKELB
 	  The module will be called 'fakelb'.
 
 config IEEE802154_SERIAL
+	depends on IEEE802154_DRIVERS && MAC802154
 	tristate "Simple LR-WPAN UART driver"
 
 config IEEE802154_AT86RF230
+	depends on IEEE802154_DRIVERS && MAC802154
 	tristate "AT86RF230 transceiver driver"
 	depends on SPI
-
-
-endif
 
